--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,30 @@ telegraph
 tenacity
 tgCrypto
 xattr
+aiohttp
+asgiref
+bencode.py
+bencoding
+cloudscraper
+dnspython
+feedparser
+flask
+gc-python-utils
+cinemagoer
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
+gunicorn
+lk21
+lxml
+markdown
+mediainfo
+pillow
+playwright
+psutil
+pybase64
+tenacity
+tgCrypto
+urllib3
+waybackpy
+xattr
