--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,6 @@ services:
       context: .
       dockerfile: Dockerfile
     command: bash start.sh
-    restart: on-failure
+    restart: always
     ports:
       - "80:80"
